// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/ApproveButton Basic 1`] = `
<button
  className="ui button ok"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="checkmark icon"
    onClick={[Function]}
  />
  Save
</button>
`;

exports[`Storyshots Buttons/ApproveButton Custom 1`] = `
<button
  className="ui green button ok"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="add user icon"
    onClick={[Function]}
  />
  Add
</button>
`;

exports[`Storyshots Buttons/CancelButton Basic 1`] = `
<button
  className="ui button basic cancel"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="remove icon"
    onClick={[Function]}
  />
  Cancel
</button>
`;

exports[`Storyshots Buttons/CancelButton Custom 1`] = `
<button
  className="ui red button basic cancel"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="stop icon"
    onClick={[Function]}
  />
  Stop
</button>
`;

exports[`Storyshots Buttons/CopyToClipboardButton Basic 1`] = `
<button
  className="ui basic compact icon button"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="copy icon"
    onClick={[Function]}
  />
</button>
`;

exports[`Storyshots Buttons/CopyToClipboardButton Custom 1`] = `
<button
  className="ui basic vertical animated button"
  onClick={[Function]}
>
  <div
    className="visible content"
  >
    Copy ID
  </div>
  <div
    className="hidden content"
  >
    <i
      aria-hidden="true"
      className="copy icon"
      onClick={[Function]}
    />
  </div>
</button>
`;

exports[`Storyshots Data/HighlightText Bash 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#808000",
        }
      }
    >
      #!/bin/bash
    </span>
    

    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      # declare STRING variable
    </span>
    
STRING=
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Hello World"
    </span>
    

    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      #print variable on a screen
    </span>
    

    <span
      className="hljs-built_in"
      style={Object {}}
    >
      echo
    </span>
     
    <span
      style={
        Object {
          "color": "#660e7a",
        }
      }
    >
      $STRING
    </span>
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Basic 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    {
    
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "employee"
    </span>
    : {
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "name"
    </span>
    :       
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "sonoo"
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "salary"
    </span>
    :      
    <span
      style={
        Object {
          "color": "#0000ff",
          "fontWeight": "normal",
        }
      }
    >
      56000
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "married"
    </span>
    :    
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      true
    </span>
    
    }
}
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText JSON 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    {
    
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "employee"
    </span>
    : {
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "name"
    </span>
    :       
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "sonoo"
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "salary"
    </span>
    :      
    <span
      style={
        Object {
          "color": "#0000ff",
          "fontWeight": "normal",
        }
      }
    >
      56000
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "married"
    </span>
    :    
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      true
    </span>
    
    }
}
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Java Script 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        ask
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      >
        question, yes, no
      </span>
      ) 
    </span>
    {
  
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      if
    </span>
     (confirm(question)) yes()
  
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      else
    </span>
     no();
}


    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        showOk
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      />
      ) 
    </span>
    {
  alert( 
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "You agreed."
    </span>
     );
}


    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        showCancel
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      />
      ) 
    </span>
    {
  alert( 
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "You canceled the execution."
    </span>
     );
}


    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      // usage: functions showOk, showCancel are passed as arguments to ask
    </span>
    
ask(
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Do you agree?"
    </span>
    , showOk, showCancel);
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Python 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      import
    </span>
     whois

data = raw_input(
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Enter a domain: "
    </span>
    )
w = whois.whois(data)


    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      print
    </span>
     w
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText YAML 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      className="hljs-attr"
      style={Object {}}
    >
      tosca_definitions_version:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      cloudify_dsl_1_3
    </span>
    


    <span
      className="hljs-attr"
      style={Object {}}
    >
      description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
  This blueprint installs a simple web server on the manager VM using Cloudify's script plugin.


    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
      imports:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
        - http:
    </span>
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      //www.getcloudify.org/spec/cloudify/4.5.5.dev1/types.yaml
    </span>
    


    <span
      className="hljs-attr"
      style={Object {}}
    >
      inputs:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
        server_ip:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      The ip of the server the application will be deployed on.

    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
        agent_user:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      User name used when SSH-ing into the started machine.

    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
        agent_private_key_path:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      Path to a private key that resides on the management machine.
      SSH-ing into agent machines will be done with this key.
    </span>
  </code>
</pre>
`;

exports[`Storyshots Data/KeyIndicator Executions 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="cogs icon"
          onClick={[Function]}
        />
         
        6
      </div>
      <div
        className="label"
      >
        Running Executions
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/KeyIndicator Plugins 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="plug icon"
          onClick={[Function]}
        />
         
        3
      </div>
      <div
        className="label"
      >
        Plugins
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/KeyIndicator User Stars 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="star icon"
          onClick={[Function]}
        />
         
        54
      </div>
      <div
        className="label"
      >
        User Stars
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/NodesTree Collapsed 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_close"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree Expanded 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree Selectable 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree With Icons 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree With Tree Data 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Elements/Checkmark Basic 1`] = `
<i
  aria-hidden="true"
  className="square outline icon"
  onClick={[Function]}
  title="No"
/>
`;

exports[`Storyshots Elements/Checkmark Checked 1`] = `
<i
  aria-hidden="true"
  className="checkmark box icon"
  onClick={[Function]}
  title="Yes"
/>
`;

exports[`Storyshots Elements/Checkmark Unchecked 1`] = `
<i
  aria-hidden="true"
  className="square outline icon"
  onClick={[Function]}
  title="No"
/>
`;

exports[`Storyshots Elements/Dropdown Basic 1`] = `
<div
  style={
    Object {
      "height": 200,
    }
  }
>
  <div
    aria-expanded={false}
    className="ui search selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autoComplete="off"
      className="search"
      onChange={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    >
      Option 1
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon clear"
      onClick={[Function]}
    />
    <div
      className="menu transition"
      role="listbox"
    >
      <div
        aria-checked={true}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        option-value="option1"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Option 1
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="option2"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Option 2
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="option3"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Option 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/EditableLabel Basic 1`] = `
<label
  className=" editPlaceholder"
  onClick={[Function]}
>
  Click to edit
</label>
`;

exports[`Storyshots Elements/EditableLabel Editable 1`] = `
<label
  className=" editPlaceholder"
  onClick={[Function]}
>
  Enter your text here...
</label>
`;

exports[`Storyshots Elements/EditableLabel Read Only 1`] = `
<label
  className=" "
  onClick={[Function]}
>
  Sample Text
</label>
`;

exports[`Storyshots Elements/ErrorMessage Auto Hide 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Error Occured
  </div>
  <div
    className="content"
  >
    This error will disappear soon.
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Basic 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Error Occured
  </div>
  <div
    className="content"
  >
    Invalid Blueprint ID provided
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Custom Header 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Invalid input
  </div>
  <div
    className="content"
  >
    Please provide value according to blueprint naming rules.
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Error Object 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Input error
  </div>
  <div
    className="content"
  >
    Please provide agent_private_key_path
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Errors List 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Errors in the form
  </div>
  <ul
    className="list"
  >
    <li
      className="content"
    >
      Please provide deployment name
    </li>
    <li
      className="content"
    >
      Please provide agent_private_key_path
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements/Loading Basic 1`] = `
<div
  className="ui basic segment loadingSegment"
>
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="ui text loader"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Loading Custom Message 1`] = `
<div
  className="ui basic segment loadingSegment"
>
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="ui text loader"
      >
        Loading files
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Menu Example 1`] = `
<div
  className="ui vertical menu"
>
  <div
    className="item"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      Products
    </div>
    <div
      className="menu"
    >
      <a
        className="item"
        onClick={[Function]}
        option-value="enterprise"
      >
        Enterprise
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="consumer"
      >
        Consumer
      </a>
    </div>
  </div>
  <div
    className="item"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      CMS Solutions
    </div>
    <div
      className="menu"
    >
      <a
        className="item"
        onClick={[Function]}
        option-value="rails"
      >
        Rails
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="python"
      >
        Python
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="php"
      >
        Php
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/Alert Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Alert
  </button>
</div>
`;

exports[`Storyshots Modal/Confirm Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Confirm
  </button>
</div>
`;

exports[`Storyshots Modal/ReadmeModal Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Readme
  </button>
</div>
`;

exports[`Storyshots Popups/Popup Basic 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hover over me to see popup
</span>
`;

exports[`Storyshots Popups/PopupConfirm Basic 1`] = `
<button
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Delete
</button>
`;

exports[`Storyshots Popups/PopupConfirm No Cancel Button 1`] = `
<button
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Delete
</button>
`;

exports[`Storyshots Popups/PopupHelp Basic 1`] = `
<i
  aria-hidden="true"
  className="help circle icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupHelp Custom Header 1`] = `
<i
  aria-hidden="true"
  className="help circle icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupHelp Custom Trigger 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Show Help
</span>
`;

exports[`Storyshots Popups/PopupMenu Basic 1`] = `
<i
  aria-hidden="true"
  className="content link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Custom Icon 1`] = `
<i
  aria-hidden="true"
  className="arrow down bordered link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Custom Position 1`] = `
<i
  aria-hidden="true"
  className="content link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Help Popup 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <i
    aria-hidden="true"
    className="content link icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</span>
`;
